# moltbook

./: .gitignore  QUICKSTART.md  README.md  README_HF_SPACE.md  app.py  main.py  pyproject.toml  requirements.txt  run_daily_workflow.py
config/: __init__.py  config.yaml  settings.py
data/archives/2026/03/: moltbook_interactions_2026-03-08.jsonl  moltbook_interactions_2026-03-14.jsonl  moltbook_interactions_2026-03-15.jsonl
data/state/: gandalf_state.json  processed_comments.json
docs/: AUTOMATED_COMMENT_RESPONSE_WORKFLOW.md  MOLTBOOK_GUIDE.md  README.md
experiments/: api_calls.ipynb
src/: __init__.py  data_archiver.py  gandalf_poster.py  moltbook_client.py  response_generator.py  workflow.py  workflow_tasks.py
src/core/: __init__.py  moltbook_client.py
src/tasks/: __init__.py  build_context.py  check_new_comments.py  send_replies.py
src/tasks/gandalf/: __init__.py  poster.py  task.py
src/tasks/generate_responses/: __init__.py  response_generator.py  task.py
utils/: __init__.py  gradio_utils.py  logging_utils.py  rate_limiter.py  state_manager.py
