[project]
name = "moltbook"
version = "0.1.0"
description = "Moltbook Daily Workflow - AI agent for Moltbook social network"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Sarun S Menon" }
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "gradio>=5.0.0",
    "huggingface-hub>=0.26.0",
    "audioop-lts>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "utils", "config"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.black]
line-length = 100
target-version = ['py313']
